// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppNotification /> Default story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> InverseVariant story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-inverse"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      >
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> InverseWithDismissAndControls story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-inverse"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      >
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral app-notification__close-btn"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> WithControls story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="app-notification__actions"
      >
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> WithDismissAndControls story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        Limited subTitle text
      </span>
      <div
        class="app-notification__actions"
      >
        <div
          class="button-group button-group--horizontal !flex-row"
        >
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Call To Action
            </span>
          </button>
          <button
            class="button button--layout-none button--tertiary button--lg button--size-lg button--variant-inverse"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-inverse app-notification__close-btn"
      type="button"
    >
      <span
        class="text text--label-lg button__text"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> WithLinkInSubtitle story renders snapshot 1`] = `
<div
  class="app-notification app-notification--variant-default"
  role="status"
>
  <div
    class="app-notification__content"
  >
    <section>
      <div
        class="text text--headline-sm app-notification__title"
      >
        This is an AppNotification title
      </div>
      <span
        class="text text--body-md app-notification__sub-title"
      >
        <span
          class="text text--body-md"
        >
          Some text with a
           
          <a
            class="link link--emphasis-default link--variant-inverse"
            href="https://example.com/"
          >
            link
          </a>
           
          in.
        </span>
      </span>
    </section>
  </div>
</div>
`;
